--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
     "mongoose": "^6.7.0",
     "mongoose-moment": "^0.1.3"
